# queue-load-test

./: .env.example  .gitignore  README.md  docker-compose.yml
consumer/: Dockerfile  go.mod  go.sum
consumer/cmd/: main.go
consumer/internal/model/: telemetry.go
consumer/internal/queue/: consumer.go
consumer/internal/repository/: telemetry.go  telemetry_test.go
firmware/: CMakeLists.txt  diagram.json  wokwi.toml
firmware/src/: lwipopts.h
firmware/src/core/: config.hpp  main.cpp
firmware/src/network/: http_client.cpp  http_client.hpp  wifi_manager.cpp  wifi_manager.hpp
firmware/src/sensors/: adc_sensor.cpp  adc_sensor.hpp  gpio_sensor.cpp  gpio_sensor.hpp  ultrasonic_sensor.cpp  ultrasonic_sensor.hpp
loadtest/scripts/: telemetry.js
migrations/: 001_create_telemetry_readings.down.sql  001_create_telemetry_readings.up.sql
producer/: Dockerfile  go.mod
producer/cmd/: main.go
producer/internal/handler/: telemetry.go  telemetry_test.go
producer/internal/model/: telemetry.go  telemetry_test.go
producer/internal/queue/: publisher.go
